Notifications and repeat activity added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="sort_by_creation_desc">Creation time</string>
     <string name="sort_alphabetically">Alphabetically</string>
     <string name="search_hint">Search words</string>
+    <string name="time_to_repeat_words_title">Time to repeat words</string>
 </resources>
